--- a/resources/deb/heroku/control
+++ b/resources/deb/heroku/control
@@ -3,6 +3,6 @@ Version: <%= version %>
 Section: main
 Priority: standard
 Architecture: all
-Depends: ruby2.1|ruby2.0|libopenssl-ruby1.9.1, ruby2.1|ruby2.0|libreadline-ruby1.9.1, ruby2.1|ruby2.0|ruby1.9.1, libssl0.9.8 (>= 0.9.8k) | libssl1.0.0
+Depends: ruby
 Maintainer: Heroku
 Description: Client library and CLI to deploy apps on Heroku.
